--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,9 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
-<hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h1>The best movies according to michal</h1>
+<h2>my top 3 movies of all time</h2>
+<hr/>
+<h3>there will be blood</h3>
+<p>best acting of daniel d lawis</p>
+<h3>django unchained</h3>
+<p>intersting movie.</p>
+<h3>the godfather</h3>
+<p>well just about everything.</p>
